  (Vinayakumar B via phunt, fpj)

  ZOOKEEPER-1811. The ZooKeeperSaslClient service name principal is
  hardcoded to "zookeeper" (Harsh J via phunt)

  ZOOKEEPER-1873. Unnecessarily InstanceNotFoundException is coming when
  unregister failed jmxbeans (Rakesh R via michim)

  ZOOKEEPER-1844. TruncateTest fails on windows (Rakesh R via fpj)

IMPROVEMENTS:

  ZOOKEEPER-1564. Allow JUnit test build with IBM Java
    (Paulo Ricardo Paz Vital via phunt)

  ZOOKEEPER-1598. Ability to support more digits in the version string
  (Raja Aluri via phunt)

  ZOOKEEPER-1583. Document maxClientCnxns in conf/zoo_sample.cfg
  (Christopher Tubbs via phunt)

  ZOOKEEPER-1584. Adding mvn-install target for deploying the
  zookeeper artifacts to .m2 repository (Ashish Singh via phunt)

  ZOOKEEPER-1324. Remove Duplicate NEWLEADER packets from the
  Leader to the Follower. (thawan, fpj via fpj)

  ZOOKEEPER-1615. minor typos in ZooKeeper Programmer's Guide web page
  (Evan Zacks via phunt)

  ZOOKEEPER-1552. Enable sync request processor in Observer (thawan, fpj)

  ZOOKEEPER-1758. Add documentation for zookeeper.observer.syncEnabled flag 
  (thawan, fpj via thawan)

  ZOOKEEPER-1771. ZooInspector authentication (Benjamin Jaton via phunt)

  ZOOKEEPER-1627. Add org.apache.zookeeper.common to exported packages
  in OSGi MANIFEST (Arnoud Glimmerveen via phunt)
  
  ZOOKEEPER-1666. Avoid Reverse DNS lookup if the hostname in 
  connection string is literal IP address. (George Cao via camille)
 
  ZOOKEEPER-1786. ZooKeeper data model documentation is incorrect
  (Niraj Tolia via fpj)

  ZOOKEEPER-1715. Upgrade netty version (Sean Bridges via michim)

  ZOOKEEPER-1430. add maven deploy support to the build
  (Giridharan Kesavan via phunt)

Release 3.4.5 - 2012-09-30

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1376. zkServer.sh does not correctly check for
  $SERVER_JVMFLAGS (Skye W-M via henryr)

  ZOOKEEPER-1550. ZooKeeperSaslClient does not finish anonymous login on